src/objects/BMCServiceDesk__BMC_Person__c.object
<CustomObject>
    <description>BMC_Person: CMDB Class that stores information about the people who provide, consume, use, maintain, own, or have some other relationship with the services, systems, and other configuration items (CIs) in your organization.   The BMC_Person class contains many attributes that can help you define and classify individuals that perform some role in your organization. For example, the PersonAdditionalDetails attribute enables you to provide additional role, responsibility, or other pertinent information about a person by typing up to 254 characters in a field.  You might use the BMC_Person class as an extension of the BMC_Role class. For  example, if you have classified certain individuals to perform a specific IT or business process in your IT environment (and defined this role in the BMC_Role class), you can obtain detailed contact information for that person to help streamline communications with other people in the organization.</description>
    <fields>
        <fullName>BMCServiceDesk__Email__c</fullName>
        <label>Email</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Fax__c</fullName>
        <label>Fax</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FirstName__c</fullName>
        <label>First Name</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InstanceID__c</fullName>
        <label>Instance ID</label>
        <length>38</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__LastName__c</fullName>
        <label>Last Name</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MiddleName__c</fullName>
        <label>Middle Name</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MobilePhone__c</fullName>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__OfficePhone__c</fullName>
        <label>Office Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PagerEmail__c</fullName>
        <label>Pager Email</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PagerPINNumber__c</fullName>
        <label>Pager PIN Number</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PagerParams1__c</fullName>
        <label>Pager Parameters 1</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PagerParams2__c</fullName>
        <label>Pager Parameters 2</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PagerPhoneNumber__c</fullName>
        <label>Pager Phone Number</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PagerProvider__c</fullName>
        <label>Pager Provider</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PagerSoftware__c</fullName>
        <label>Pager Software</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PagerType__c</fullName>
        <label>Pager Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Numeric Only</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PersonAdditionalDetails__c</fullName>
        <label>Person Additional Details</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PersonDepartment__c</fullName>
        <label>Person Department</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PersonId__c</fullName>
        <label>Person ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PersonRegion__c</fullName>
        <label>Person Region</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__SecondaryEmail__c</fullName>
        <label>Secondary Email</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Title__c</fullName>
        <label>Title</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__WebPage__c</fullName>
        <label>WebPage</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Person</label>
    <nameField>
        <label>BMC_Person Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Person</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>